      pa. TRQ-1467
  b - Fixed deadlock in remove_array. remove_array was calling get_arry with allarrays_mutex
      locked. TRQ-1466
  b - Fix a deadlock in rare cases on job insertion. TRQ-1472.
  b - Fix a deadlock after restarting pbs_server when it was SIGKILL'd before a 
      job array was done cloning. TRQ-1474.

4.1.3
  b - fix a security loophole that potentially allowed an interactive job to run 
      as root due to not resetting a value when $attempt_to_make_dir and $tmpdir
      are set. TRQ-1078.
  b - fix down_on_error for the server. TRQ-1074.
  b - prevent pbs_server from spinning in select due to sockets in CLOSE_WAIT.
      TRQ-1161.
  e - Have pbs_server save the queues each time before exiting so that legacy 
      formats are converted to xml after upgrading. TRQ-1120.
  b - Fix phantom jobs being left on the pbs_moms and blocking jobs for Cray 
      hardware. TRQ-1162. (Thanks Matt Ezell)
  b - Fix a race condition on free'd memory when check for orphaned alps
      reservations. TRQ-1181. (Thanks Matt Ezell)
  b - If interrupted when reading the terminal type for an interactive job continue 
      trying to read instead of giving up. TRQ-1091.
  b - Fix displaying elapsed time for a job. TRQ-1133.
  b - Make offlining nodes persistent after shutting down. TRQ-1087.
  b - Fixed a memory leak when calling net_move. net_move allocates memory for args
      and starts a thread on send_job. However, args were not getting released
      in send_job.  TRQ-1199
  b - Changed pbs_connect to check for a server name. If it is passed in only that
      server name is tried for a connection. If no server name is given then the 
      default list is used. The previous behavior was to try the name passed in and
      the default server list. This would lead to confusion in utilities like qstat
      when querying for a specific server. If the server specified was no available
      information from the remaining list would still be returned.